--- a/PhoneBookTestApp/PhoneBookTestApp.csproj
+++ b/PhoneBookTestApp/PhoneBookTestApp.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Tests\PhoneBookTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
